--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node src/app.ts",
+    "build": "tsc",
+    "start": "tsc && node dist/app.js",
     "dev": "nodemon src/app.ts",
     "format": "prettier --write .",
     "lint": "eslint ."
@@ -19,7 +20,7 @@
     "eslint": "^9.17.0",
     "nodemon": "^3.1.9",
     "prettier": "^3.4.2",
-    "typescript": "^5.7.2",
+    "ts-node": "^10.9.2",
     "typescript-eslint": "^8.19.0"
   },
   "dependencies": {
@@ -27,6 +28,6 @@
     "express": "^4.21.2",
     "promised-sqlite3": "^2.1.0",
     "sqlite3": "^5.1.7",
-    "ts-node": "^10.9.2"
+    "typescript": "^5.7.2"
   }
 }
