--- a/compose.yml
+++ b/compose.yml
@@ -4,4 +4,6 @@ services:
     ports:
       - 80:3000
     volumes:
-      - ./database.db:/app/database.db
+      - type: bind
+        source: ./database.db
+        target: /app/database.db
